--- a/app/src/main/res/layout/calendar_and_tasks_fragment.xml
+++ b/app/src/main/res/layout/calendar_and_tasks_fragment.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_margin="16dp"
     tools:context=".presentation.calendarandtasks.CalendarAndTasksFragment">
 
 
@@ -12,6 +13,7 @@
         android:id="@+id/calendarView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="8dp"
         android:layout_weight="1" />
 
     <androidx.recyclerview.widget.RecyclerView
